[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_python_tools"
dependencies = ['colorlog']
authors = [
    { name = "Chris Friedman", email = "dev+custom_python_tools@chris-s-friedman.com" }
]
description = "My custom functions I use for projects"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[project.urls]
"Homepage" = "https://github.com/chris-s-friedman/custom_python_tools"
"Bug Tracker" = "https://github.com/chris-s-friedman/custom_python_tools/issues"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
sections = ["FUTURE", "STDLIB", "FIRSTPARTY", "THIRDPARTY", "LOCALFOLDER"]
